# sonos

./: .gitmodules  Cargo.toml  README.md
sonos-cli/: Cargo.toml
sonos-cli/src/: main.rs
