[package]
name = "sonos-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive", "color"] }
async-std = { version = "1.12.0" }
async-stream = "0.3.3"
futures = "0.3.24"